Updated MatchingHandlerTest, Reworked RatingComparator and TimeComparator, Removed toString in TutorComparator