@@ -1,5 +1,6 @@
 package skolard.logic.matching;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -11,30 +12,34 @@ import skolard.objects.Session;
  * based on the tutor's grade for a specific course.
  */
 public class RatingComparator extends PriorityList<Session> {
-
+    private final List<Session> sessions;
     private static final double MISSING_GRADE = 1.0;
 
     public RatingComparator(List<Session> sessions) {
-        super(sessions); // defensive copy
+        this.sessions = sessions != null ? new ArrayList<>(sessions) : new ArrayList<>();
     }
 
     public List<Session> sortByBestCourseRating(String course) {
-        if (items.isEmpty() || course == null || course.trim().isEmpty()) {
+        if (course == null || course.isBlank()) {
             return Collections.emptyList();
         }
 
-        // Remove sessions with wrong course or missing grade
-        items.removeIf(session -> {
+        List<Session> filtered = new ArrayList<>();
+        for (Session session : sessions) {
             String courseName = session.getCourseName();
             Double grade = session.getTutor().getGradeForCourse(course);
-            return courseName == null || !courseName.equalsIgnoreCase(course) || grade == null || grade.equals(MISSING_GRADE);
-        });
 
-        // Sort sessions by grade (higher is better)
-        sortWithComparator(Comparator.comparingDouble(
-            (Session s) -> s.getTutor().getGradeForCourse(course)
-        ).reversed());
+            if (courseName != null && courseName.equalsIgnoreCase(course) && grade != null && !grade.equals(MISSING_GRADE)) {
+                filtered.add(session);
+            }
+        }
 
-        return getAllItems();
+        // Sort in-place by grade descending
+        Collections.sort(filtered,
+            Comparator.comparingDouble((Session s) -> s.getTutor().getGradeForCourse(course))
+                      .reversed()
+        );
+
+        return Collections.unmodifiableList(filtered);
     }
 }
